--- a/Hadoop.Client/Hadoop.Client.csproj
+++ b/Hadoop.Client/Hadoop.Client.csproj
@@ -12,6 +12,8 @@
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
+    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -31,8 +33,20 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.5.0.8\lib\net40\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Net.Http.2.0.20710.0\lib\net40\System.Net.Http.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Net.Http.Formatting, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.4.0.30506.0\lib\net40\System.Net.Http.Formatting.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Net.Http.WebRequest, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Net.Http.2.0.20710.0\lib\net40\System.Net.Http.WebRequest.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -40,9 +54,35 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\Awaitable\System.Runtime.CompilerServices\AsyncTaskMethodBuilder.cs" />
+    <Compile Include="Core\Awaitable\System.Runtime.CompilerServices\AsyncTaskMethodBuilderOfT.cs" />
+    <Compile Include="Core\Awaitable\System.Runtime.CompilerServices\AsyncVoidMethodBuilder.cs" />
+    <Compile Include="Core\Awaitable\System.Runtime.CompilerServices\IAsyncStateMachine.cs" />
+    <Compile Include="Core\Awaitable\System.Runtime.CompilerServices\ICriticalNotifyCompletion.cs" />
+    <Compile Include="Core\Awaitable\System.Runtime.CompilerServices\INotifyCompletion.cs" />
+    <Compile Include="Core\Awaitable\System.Threading.Tasks\TaskAwaiter.cs" />
+    <Compile Include="Core\Awaitable\System.Threading.Tasks\TaskAwaiterOfT.cs" />
+    <Compile Include="Core\Awaitable\System.Threading.Tasks\TaskCoreExtensions.cs" />
+    <Compile Include="Core\Awaitable\System.Threading.Tasks\TaskEx.cs" />
+    <Compile Include="Core\Awaitable\System.Threading.Tasks\TaskSchedularHelper.cs" />
+    <Compile Include="Hive\HiveClient.cs" />
+    <Compile Include="Hive\HiveClientConfig.cs" />
+    <Compile Include="Hive\IReadResults.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WebHdfs\DirectoryEntry.cs" />
+    <Compile Include="WebHdfs\IHdfsClient.cs" />
+    <Compile Include="WebHdfs\Resource.cs" />
+    <Compile Include="WebHdfs\WebHdfsHttpClient.cs" />
+    <Compile Include="WebHdfs\WebHdfsOperation.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="WebHCatalog\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
