--- a/Hadoop.Client/Hadoop.Client.csproj
+++ b/Hadoop.Client/Hadoop.Client.csproj
@@ -54,30 +54,32 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Core\Awaitable\System.Runtime.CompilerServices\AsyncTaskMethodBuilder.cs" />
-    <Compile Include="Core\Awaitable\System.Runtime.CompilerServices\AsyncTaskMethodBuilderOfT.cs" />
-    <Compile Include="Core\Awaitable\System.Runtime.CompilerServices\AsyncVoidMethodBuilder.cs" />
-    <Compile Include="Core\Awaitable\System.Runtime.CompilerServices\IAsyncStateMachine.cs" />
-    <Compile Include="Core\Awaitable\System.Runtime.CompilerServices\ICriticalNotifyCompletion.cs" />
-    <Compile Include="Core\Awaitable\System.Runtime.CompilerServices\INotifyCompletion.cs" />
-    <Compile Include="Core\Awaitable\System.Threading.Tasks\TaskAwaiter.cs" />
-    <Compile Include="Core\Awaitable\System.Threading.Tasks\TaskAwaiterOfT.cs" />
-    <Compile Include="Core\Awaitable\System.Threading.Tasks\TaskCoreExtensions.cs" />
-    <Compile Include="Core\Awaitable\System.Threading.Tasks\TaskEx.cs" />
-    <Compile Include="Core\Awaitable\System.Threading.Tasks\TaskSchedularHelper.cs" />
+    <Compile Include="ConnectionConfig.cs" />
+    <Compile Include="Awaitable\System.Runtime.CompilerServices\AsyncTaskMethodBuilder.cs" />
+    <Compile Include="Awaitable\System.Runtime.CompilerServices\AsyncTaskMethodBuilderOfT.cs" />
+    <Compile Include="Awaitable\System.Runtime.CompilerServices\AsyncVoidMethodBuilder.cs" />
+    <Compile Include="Awaitable\System.Runtime.CompilerServices\IAsyncStateMachine.cs" />
+    <Compile Include="Awaitable\System.Runtime.CompilerServices\ICriticalNotifyCompletion.cs" />
+    <Compile Include="Awaitable\System.Runtime.CompilerServices\INotifyCompletion.cs" />
+    <Compile Include="Awaitable\System.Threading.Tasks\TaskAwaiter.cs" />
+    <Compile Include="Awaitable\System.Threading.Tasks\TaskAwaiterOfT.cs" />
+    <Compile Include="Awaitable\System.Threading.Tasks\TaskCoreExtensions.cs" />
+    <Compile Include="Awaitable\System.Threading.Tasks\TaskEx.cs" />
+    <Compile Include="Awaitable\System.Threading.Tasks\TaskSchedularHelper.cs" />
+    <Compile Include="WebHdfs\HadoopRemoteRestHardCodes.cs" />
     <Compile Include="Hive\HiveClient.cs" />
     <Compile Include="Hive\HiveClientConfig.cs" />
     <Compile Include="Hive\IReadResults.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringExtensions.cs" />
+    <Compile Include="WebHCatalog\WebHCatHardCodes.cs" />
     <Compile Include="WebHdfs\DirectoryEntry.cs" />
     <Compile Include="WebHdfs\IHdfsClient.cs" />
     <Compile Include="WebHdfs\Resource.cs" />
     <Compile Include="WebHdfs\WebHdfsHttpClient.cs" />
     <Compile Include="WebHdfs\WebHdfsOperation.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="WebHCatalog\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
