--- a/Hadoop.Client/Hadoop.Client.csproj
+++ b/Hadoop.Client/Hadoop.Client.csproj
@@ -66,18 +66,29 @@
     <Compile Include="Awaitable\System.Threading.Tasks\TaskCoreExtensions.cs" />
     <Compile Include="Awaitable\System.Threading.Tasks\TaskEx.cs" />
     <Compile Include="Awaitable\System.Threading.Tasks\TaskSchedularHelper.cs" />
-    <Compile Include="WebHdfs\HadoopRemoteRestHardCodes.cs" />
-    <Compile Include="Hive\HiveClient.cs" />
-    <Compile Include="Hive\HiveClientConfig.cs" />
-    <Compile Include="Hive\IReadResults.cs" />
+    <Compile Include="HttpClientBuilder.cs" />
+    <Compile Include="Jobs\HiveJobCreateParameters.cs" />
+    <Compile Include="Jobs\IHadoopJobClient.cs" />
+    <Compile Include="Jobs\JobCreateHttpResponse.cs" />
+    <Compile Include="Jobs\JobCreateParameters.cs" />
+    <Compile Include="Jobs\JobCreationResults.cs" />
+    <Compile Include="Jobs\JobDetails.cs" />
+    <Compile Include="Jobs\JobList.cs" />
+    <Compile Include="Jobs\JobStatusCode.cs" />
+    <Compile Include="Jobs\MapReduceJobCreateParameters.cs" />
+    <Compile Include="Jobs\PigJobCreateParameters.cs" />
+    <Compile Include="Jobs\SqoopJobCreateParameters.cs" />
+    <Compile Include="Jobs\StreamingMapReduceJobCreateParameters.cs" />
+    <Compile Include="Jobs\WebHCatalog\WebHCatalogJobClient.cs" />
+    <Compile Include="HadoopRemoteRestHardCodes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringExtensions.cs" />
-    <Compile Include="WebHCatalog\WebHCatHardCodes.cs" />
-    <Compile Include="WebHdfs\DirectoryEntry.cs" />
-    <Compile Include="WebHdfs\IHdfsClient.cs" />
-    <Compile Include="WebHdfs\Resource.cs" />
-    <Compile Include="WebHdfs\WebHdfsHttpClient.cs" />
-    <Compile Include="WebHdfs\WebHdfsOperation.cs" />
+    <Compile Include="Jobs\WebHCatalog\WebHCatHardCodes.cs" />
+    <Compile Include="Hdfs\DirectoryEntry.cs" />
+    <Compile Include="Hdfs\IHdfsClient.cs" />
+    <Compile Include="Hdfs\Resource.cs" />
+    <Compile Include="Hdfs\WebHdfs\WebHdfsHttpClient.cs" />
+    <Compile Include="Hdfs\WebHdfs\WebHdfsOperation.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
