--- a/Hadoop.Client/Hadoop.Client.csproj
+++ b/Hadoop.Client/Hadoop.Client.csproj
@@ -79,6 +79,8 @@
     <Compile Include="Jobs\PigJobCreateParameters.cs" />
     <Compile Include="Jobs\SqoopJobCreateParameters.cs" />
     <Compile Include="Jobs\StreamingMapReduceJobCreateParameters.cs" />
+    <Compile Include="Jobs\WebHCatalog\Data\PayloadConverter.cs" />
+    <Compile Include="Jobs\WebHCatalog\Data\PayloadConverterBase.cs" />
     <Compile Include="Jobs\WebHCatalog\WebHCatalogJobClient.cs" />
     <Compile Include="HadoopRemoteRestHardCodes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
