Can schedule hive job now

--- a/Hadoop.Client.Tests/Hadoop.Client.Tests.csproj
+++ b/Hadoop.Client.Tests/Hadoop.Client.Tests.csproj
@@ -51,6 +51,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Connect.cs" />
+    <Compile Include="JobSchedulingTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebHdfsClientTests.cs" />
   </ItemGroup>
