use NFluent instead of fluent assertions

--- a/Hadoop.Client.Tests/Hadoop.Client.Tests.csproj
+++ b/Hadoop.Client.Tests/Hadoop.Client.Tests.csproj
@@ -35,8 +35,8 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="FluentAssertions">
-      <HintPath>..\packages\FluentAssertions.2.1.0.0\lib\net40\FluentAssertions.dll</HintPath>
+    <Reference Include="NFluent">
+      <HintPath>..\packages\NFluent.1.0.0.0\lib\net40\NFluent.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
